Fri Jul 20 11:00:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:

          Removed 2926 & 2936 tests from LynxOS, seems to be the
          memory mapping problem again.

Fri Jul 20 09:44:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added POA/Forwarding

Fri Jul 20 08:48:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Processes/Spawn.cpp:
        * examples/APG/Reactor/Timers.cpp:
          Added missing includes

Fri Jul 20 08:40:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.cpp:
          Use ACE_HAS_POSIX_SEM_TIMEOUT instead of ACE_HAS_POSIX_TIMEOUT.
          This fixes bugzilla 2947

        * ace/OS_NS_time.inl (gethrtime):
          Reshuffeld the implementation to make some checks less complex

        * ace/Service_Gestalt.h:
          Doxygen fixes

Fri Jul 20 07:36:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * ace/Thread_Manager.cpp:

          I should stop trying to second guess myself, the derived class
          has a protected destructor!

Fri Jul 20 03:22:02 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * examples/APG/Active_Objects/AO.cpp:
        * examples/APG/Active_Objects/AO2.cpp:
        * examples/APG/Logging/Trace_Return.cpp:
        * examples/APG/Logging/Wrap_Macros.cpp:
        * examples/APG/Processes/Spawn.cpp:
        * examples/APG/Reactor/HAStatus.cpp:
        * examples/APG/Reactor/Timers.cpp:
        * examples/APG/Signals/SigInfo.cpp:
        * examples/APG/Sockets/Server.cpp:
        * examples/APG/Streams/Answerer.cpp:
        * examples/APG/ThreadManagement/Async_Cancel.cpp:
        * examples/APG/ThreadPools/LF_ThreadPool.cpp:
        * examples/APG/ThreadSafety/Semaphore.cpp:
        * examples/APG/Threads/Condition_Variables.cpp:
        * examples/ASX/CCM_App/CCM_App.cpp: