@@ -601,15 +601,11 @@ sub check_for_exception_spec ()
                     $disable = 0;
                 }
                 if ($disable == 0) {
-                    if($file == /.*.hpp/ or $file == /.*.h/) {
-                        if(/throw\s*\(.+\).*;/) {
-                            print_error ("$file:$.: exception specification found");                    
-                        }
+                    if(/throw\s*\(\s*\)/) {
+                        #next;
                     }
-                    else {
-                        if(/throw\s*\(.+\).*{/) {
-                            print_error ("$file:$.: exception specification found");
-                        } 
+                    elsif(/(^|\s+)throw\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
+                        print_error ("$file:$.: exception specification found");                    
                     }
                 }
             }
@@ -1731,7 +1727,7 @@ check_for_id_string () if ($opt_l >= 1);
 check_for_newline () if ($opt_l >= 1);
 check_for_tab () if ($opt_l >= 6);
 check_for_lack_ACE_OS () if ($opt_l >= 10);
-check_for_exception_spec () if ($opt_l >= 10);
+check_for_exception_spec () if ($opt_l >= 1);
 check_for_NULL () if ($opt_l >= 1);
 check_for_improper_main_declaration () if ($opt_l >= 10);
 check_for_inline () if ($opt_l >= 2);
