@@ -1,3 +1,9 @@
+Fri Jul 20 12:09:58 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>
+
+        * bin/fuzz.pl:
+
+          enhanced and enabled check_for_exception_spec.
+
 Fri Jul 20 11:00:00 UTC 2007  Simon Massey  <sma@prismtech.com>
 
         * bin/tao_orb_tests.lst:
